--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "node": "6.11.1",
     "npm": "3.10.10"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "npm run lint && npm run mocha",
+    "mocha": "./node_modules/mocha/bin/mocha --recursive test/",
+    "lint": "./node_modules/eslint/bin/eslint.js . --fix"
+  },
   "dependencies": {
-    "blueimp-md5": "^2.8.0",
+    "blueimp-md5": "2.8.0",
     "body-parser": "1.17.1",
     "express": "4.15.2",
-    "hubspot": "^0.4.7",
-    "install": "^0.10.1",
-    "npm": "^5.3.0",
+    "hubspot": "1.0.0-beta6",
+    "install": "0.10.1",
+    "npm": "5.3.0",
     "q": "1.5.0"
   },
   "devDependencies": {
